Update ask-lang to 0.4.0-rc3

--- a/askconfig.json
+++ b/askconfig.json
@@ -4,7 +4,7 @@
         "version": "0.1.0",
         "license": "MIT"
     },
-    "metadataOutputPath": "./",
+    "metadataTargetPath": "build/metadata.json",
     "strict": true,
     "event": {
         "maxTopicNum": 2
